// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Spacer ⚠️  With margin 1`] = `
<div
  className="sc-dNLxif cRIUiY"
>
  <div
<<<<<<< HEAD
<<<<<<< HEAD
    className="sc-hEsumM kphJem"
=======
    className="sc-ktHwxA geMWbx"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
=======
    className="sc-hEsumM kphJem"
>>>>>>> 5f199d6... Removed Skeleton button (#238)
  >
    <p
<<<<<<< HEAD
      className="sc-bxivhb kFVWeI"
=======
      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer ⚠️  With padding 1`] = `
<div
<<<<<<< HEAD
<<<<<<< HEAD
  className="sc-hEsumM kphJem"
=======
  className="sc-ktHwxA geMWbx"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
=======
  className="sc-hEsumM kphJem"
>>>>>>> 5f199d6... Removed Skeleton button (#238)
>
  <div
    className="sc-dNLxif kXdeJR"
  >
    <p
<<<<<<< HEAD
      className="sc-bxivhb kFVWeI"
=======
      className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
    >
      This has padding.
    </p>
  </div>
</div>
`;
